# ManagerCameraApp

./: README.md
CameraApp/: CMakeLists.txt  Main.qml  icamera.cpp  icamera.h  main.cpp  tcpcamera.cpp  tcpcamera.h  tcpsocket.cpp  tcpsocket.h  udpcamera.cpp  udpcamera.h  udpsocket.cpp  udpsocket.h  updsocket.cpp  updsocket.h
ViewCamera/: camera.cpp  camera.h  main.cpp  tcpcamera.cpp  tcpcamera.h  tcpsocketinit.cpp  tcpsocketinit.h  updcamera.cpp  updcamera.h  updsocketinit.cpp  updsocketinit.h
